--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lightweight-charts": "^5.0.9",
     "next": "16.0.5",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
